Fixed iPad portrait issue not showing navigation

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -20,3 +20,5 @@ $body-text-color:       #999;
 $heading-color:         #333;
 $header-text-grey:      #777;
 $novo-light-grey:       #f9f9f9;
+
+$ipad: 767px;
