--- a/assets/styles/modules/_logo.scss
+++ b/assets/styles/modules/_logo.scss
@@ -31,7 +31,7 @@
 }
 
 .logo-container {
-  @media (max-width: $screen-sm-min) {
+  @media (max-width: $ipad) {
     position: absolute;
     top: 0;
     left: 0;
